Archive2/ea/a1af70f80dfbdc/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter -Wconversion -stdlib=libc++ main.cpp -lsupc++
main.cpp:9:9: error: call to implicitly-deleted default constructor of 'Foo'
    Foo foo;
        ^
main.cpp:4:10: note: default constructor of 'Foo' is implicitly deleted because field 'i' of reference type 'int &' would not be initialized
    int &i;
         ^
1 error generated.
+ g++-4.9 -std=c++11 -O3 -Wall -pedantic -Wextra -pthread -Wno-unused-variable -Wno-unused-parameter -Wconversion main.cpp
main.cpp: In function 'int main()':
main.cpp:9:9: error: use of deleted function 'Foo::Foo()'
     Foo foo;
         ^
main.cpp:1:7: note: 'Foo::Foo()' is implicitly deleted because the default definition would be ill-formed:
 class Foo
       ^
main.cpp:1:7: error: uninitialized reference member in 'class Foo'
main.cpp:4:10: note: 'int& Foo::i' should be initialized
     int &i;
          ^
